Add ProtectionAbility (first commit via VSCode)

--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
 
+<!--
+  TODO: Resolve circular dependency problems
+-->
+
 <head>
   <title>Woogic</title>
   <link rel="stylesheet" href="./style.css">
@@ -36,11 +40,13 @@
   <script type="module" src="./scripts/globals.js"></script>
   <script type="module" src="./scripts/hook.js"></script>
   <script type="module" src="./scripts/library.js"></script>
+  <script type="module" src="./scripts/main.js"></script>
   <script type="module" src="./scripts/mana.js"></script>
   <script type="module" src="./scripts/permanent.js"></script>
   <script type="module" src="./scripts/player.js"></script>
   <script type="module" src="./scripts/stack.js"></script>
-  <script type="module" src="./scripts/test.js"></script>
+  <script type="module" src="./scripts/turn.js"></script>
+  <script type="module" src="./scripts/ui.js"></script>
   <script type="module" src="./scripts/zone.js"></script>
 
   <script type="module">
