add anax & cymede and format everything

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <div id="pcccontainer" class="container" style="display:none;">
     <div id="pccgrid" class="contained">
-      <span id="topbit">How do you want to pay?<br/>Click a mana symbol to add or remove it.</span>
+      <span id="topbit">How do you want to pay?<br />Click a mana symbol to add or remove it.</span>
       <div id="pccsymbols"></div>
       <div id="pcctopay"></div>
       <div id="pccgeneric"></div>
@@ -74,7 +74,7 @@
     getId("endphase").onclick = () => UI.endPhase();
     getId("endturn").onclick = () => UI.endTurn();
 
-    RunTests();
+    StartGame();
   </script>
 </body>
 
