get it synced so I can work on it via chromebook

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     getId("endphase").onclick = () => UI.endPhase();
     getId("endturn").onclick = () => UI.endTurn();
 
-    StartGame();
+    RunTests();
   </script>
 </body>
 
